education icon update

--- a/assets/css/resumeTN.css
+++ b/assets/css/resumeTN.css
@@ -36,10 +36,7 @@ a {
   text-decoration: none;
 }
 
-.section-divider {
-  border: none;
-  border-top: 2px dashed #ccc;
-  border-right: 2px dashed #ccc;
-  border-left: 2px dashed #ccc;
-  margin: 24px 0;
+.education-icon {
+  margin-right: 8px;
+  font-size: 1.2em;
 }
